If there was book schema error the file was getting saved to FS made a function that removes error book cover

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "javascript-shopingcart",
+  "name": "javascript-book",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
