--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "devstart": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Utplaksh Mishra",
   "license": "ISC",
   "type": "module",
   "dependencies": {
