--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^8.13.3",
-    "multer": "^1.4.5-lts.2"
+    "mongoose": "^8.13.3"
   },
   "devDependencies": {
     "dotenv": "^16.5.0",
