--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
+    "method-override": "^3.0.0",
     "mongoose": "^8.13.3"
   },
   "devDependencies": {
